<resources>
    <!--Main Page-->
    <string name="homepage">Homepage</string>
    <string name="app_name">Wordle on the Go</string>
    <string name="start_game">PLAY</string>
    <string name="settings">SETTINGS</string>

    <!--Menu Page-->
    <string name="menu_title">DESTINATIONS</string>
    <string name="english_option">Standard English</string>
    <string name="french_option">France</string>
    <string name="spanish_option">Spain</string>
    <string name="japanese_option">Japan</string>
    <string name="vietnamese_option">Vietnam</string>
    <string name="quadrupleWordle">Hard Mode</string>

    <!--English Page-->
    <string name="english_page_title" translatable="false">WORDLE</string>
    <string name="newGame">New Game</string>

    <!--Keyboard-->
    <string name="K11" translatable="false">Q</string>
    <string name="K12" translatable="false">W</string>
    <string name="K13" translatable="false">E</string>
    <string name="K14" translatable="false">R</string>
    <string name="K15" translatable="false">T</string>
    <string name="K16" translatable="false">Y</string>
    <string name="K17" translatable="false">U</string>
    <string name="K21" translatable="false">I</string>
    <string name="K22" translatable="false">O</string>
    <string name="K23" translatable="false">P</string>
    <string name="K24" translatable="false">A</string>
    <string name="K25" translatable="false">S</string>
    <string name="K26" translatable="false">D</string>
    <string name="K27" translatable="false">F</string>
    <string name="K31" translatable="false">G</string>
    <string name="K32" translatable="false">H</string>
    <string name="K33" translatable="false">J</string>
    <string name="K34" translatable="false">K</string>
    <string name="K35" translatable="false">L</string>
    <string name="K36" translatable="false">Z</string>
    <string name="K37" translatable="false">X</string>
    <string name="K41">Enter</string>
    <string name="K42" translatable="false">C</string>
    <string name="K43" translatable="false">V</string>
    <string name="K44" translatable="false">B</string>
    <string name="K45" translatable="false">N</string>
    <string name="K46" translatable="false">M</string>
    <string name="K47" translatable="false">⌫</string>
    <string name="K48" translatable="false">Ñ</string>
    <string name="K49" translatable="false">`</string>
    <string name="rules">RULES</string>
    <string name="rule_page_title">How To Play</string>
    <string name="rules_page_subHeading">Guess the Wordle in 6 tries</string>
    <string name="rules_page_rule1">• Each guess must be a valid 5-letter word.</string>
    <string name="languageOptions">Language Options</string>
    <string name="rules_page_rule2">• The color of the tiles will change to show how close your guess was to the word.</string>
    <string name="rules_page_example">Examples</string>
    <string name="rules_page_ex1">W is in the word and in the correct spot.</string>
    <string name="rules_page_ex2">I is in the word but in the wrong spot.</string>
    <string name="rules_page_ex3">U is not in the word in any spot.</string>
    <string name="B1">W</string>
    <string name="B2">E</string>
    <string name="B3">A</string>
    <string name="B4">R</string>
    <string name="B5">Y</string>
    <string name="K50" translatable="false">É</string>
    <string name="K51" translatable="false">^</string>
    <string name="notEnoughLetters">There are not enough letters. Please enter a 5 letter word.</string>
    <string name="doesNotContainWord">The dictionary does not contain this word. Please try again.</string>
    <string name="hasAlreadyBeenTried">The word has already been tried above ! Try something else...</string>
    <string name="gamesPlayed">Played</string>
    <string name="winPercentage">Win %</string>
    <string name="currentStreak">Current Streak</string>
    <string name="maxStreak">Max Streak</string>
</resources>