<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wordle_homepage_background__1_"
    android:scaleType="center"
    android:screenOrientation="portrait"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/play_button"
        android:layout_width="116dp"
        android:layout_height="44dp"
        android:layout_marginTop="-12dp"
        android:background="@drawable/border"
        android:text="@string/start_game"
        app:backgroundTint="#92C37D"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_image" />

    <ImageView
        android:id="@+id/title_image"
        android:layout_width="362dp"
        android:layout_height="186dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.266"
        app:srcCompat="@drawable/wordle_title_art__1_" />

    <Button
        android:id="@+id/rules_buttons"
        android:layout_width="116dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:text="@string/rules"
        app:backgroundTint="#FED866"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/play_button" />

    <Button
        android:id="@+id/setting_button"
        android:layout_width="116dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:text="@string/settings"
        app:backgroundTint="#B6B6B6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rules_buttons" />

</androidx.constraintlayout.widget.ConstraintLayout>